tests/pp-fail/bad_endif.fl.0.exp
Error: bad_endif.fl(1,1): Unexpected \endif directive 
\endif
^      
